@@ -648,10 +648,7 @@ application/x-gnucash
 
 application/x-gnumeric
 	_description=Gnumeric spreadsheet
-	default_action_type=component
-	short_list_component_iids_for_novice_user_level=OAFIID:GNOME_Gnumeric_Control
-	short_list_component_iids_for_intermediate_user_level=OAFIID:GNOME_Gnumeric_Control
-	short_list_component_iids_for_advanced_user_level=OAFIID:GNOME_Gnumeric_Control
+	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gnumeric
 	short_list_application_ids_for_intermediate_user_level=gnumeric
 	short_list_application_ids_for_advanced_user_level=gnumeric
