@@ -1,6 +1,11 @@
+2004-04-28  Jody Goldberg <jody@gnome.org>
+
+	* gnome-vfs.applications : update to clarify that gnumeric support
+	  gnome-vfs
+
 2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>
 
-        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.
+	* configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.
 
 2004-03-31  Christian Rose  <menthos@menthos.com>
 
